crates/pgls_pretty_print/tests/snapshots/multi/tests__create_am_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_am_60.sql
snapshot_kind: text
---
CREATE ACCESS METHOD gist2 TYPE INDEX HANDLER gisthandler;

CREATE ACCESS METHOD bogus TYPE INDEX HANDLER int4in;

CREATE ACCESS METHOD bogus
TYPE INDEX
HANDLER heap_tableam_handler;

CREATE INDEX "grect2ind2" ON fast_emp4000 USING gist2
(
  home_base
);

CREATE OPERATOR CLASS box_ops DEFAULT
  FOR TYPE box
  USING gist2
  AS OPERATOR 1 <<,
  OPERATOR 2 &<,
  OPERATOR 3 &&,
  OPERATOR 4 &>,
  OPERATOR 5 >>,
  OPERATOR 6 ~=,
  OPERATOR 7 @>,
  OPERATOR 8 <@,
  OPERATOR 9 &<|,
  OPERATOR 10 <<|,
  OPERATOR 11 |>>,
  OPERATOR 12 |&>,
  FUNCTION 1 gist_box_consistent(
    internal,
    box,
    SMALLINT,
    OID,
    internal),
  FUNCTION 2 gist_box_union(
    internal,
    internal),
  FUNCTION 5 gist_box_penalty(
    internal,
    internal,
    internal),
  FUNCTION 6 gist_box_picksplit(
    internal,
    internal),
  FUNCTION 7 gist_box_same(
    box,
    box,
    internal);

CREATE INDEX "grect2ind2" ON fast_emp4000 USING gist2
(
  home_base
);

BEGIN;

DROP INDEX "grect2ind";

SET enable_seqscan = off;

SET enable_indexscan = on;

SET enable_bitmapscan = off;

SELECT
  *
FROM
  fast_emp4000
WHERE
  home_base <@ CAST('(200,200),(2000,1000)'
  AS box)
ORDER BY home_base[0][0];

SELECT
  *
FROM
  fast_emp4000
WHERE
  home_base <@ CAST('(200,200),(2000,1000)'
  AS box)
ORDER BY home_base[0][0];

SELECT
  "COUNT"(
  *
  )
FROM
  fast_emp4000
WHERE
  home_base && CAST('(1000,1000,0,0)'
  AS box);

SELECT
  "COUNT"(
  *
  )
FROM
  fast_emp4000
WHERE
  home_base && CAST('(1000,1000,0,0)'
  AS box);

SELECT "COUNT"(*) FROM fast_emp4000 WHERE home_base IS NULL;

SELECT "COUNT"(*) FROM fast_emp4000 WHERE home_base IS NULL;

ROLLBACK;

DROP ACCESS METHOD gist2;

BEGIN;

LOCK TABLE fast_emp4000 IN ACCESS EXCLUSIVE MODE;

DROP ACCESS METHOD gist2 CASCADE;

COMMIT;

SET default_table_access_method = '';

SET default_table_access_method = 'I do not exist AM';

SET default_table_access_method = btree;

CREATE ACCESS METHOD heap2
TYPE TABLE
HANDLER heap_tableam_handler;

CREATE ACCESS METHOD bogus TYPE TABLE HANDLER int4in;

CREATE ACCESS METHOD bogus TYPE TABLE HANDLER bthandler;

SELECT
  amname,
  amhandler,
  amtype
FROM
  pg_am
WHERE
  amtype =
  't'
ORDER BY 1,
  2;

CREATE TABLE tableam_tbl_heap2 ( f1 INT ) USING heap2;

INSERT INTO tableam_tbl_heap2 VALUES (1);

SELECT f1 FROM tableam_tbl_heap2 ORDER BY f1;

CREATE TABLE tableam_tblas_heap2 USING heap2 AS
  SELECT
    *
  FROM
    tableam_tbl_heap2;

SELECT f1 FROM tableam_tbl_heap2 ORDER BY f1;

CREATE MATERIALIZED VIEW tableam_tblmv_heap2 USING heap2 AS
  SELECT
    *
  FROM
    tableam_tbl_heap2;

SELECT f1 FROM tableam_tblmv_heap2 ORDER BY f1;

CREATE TABLE tableam_parted_heap2 (
  a TEXT,
  b INT
)
PARTITION BY LIST(a) USING heap2;

SELECT
  a.amname
FROM
  pg_class
  AS c,
  pg_am
  AS a
WHERE
  c.relname =
  'tableam_parted_heap2' AND
  a.oid =
  c.relam;

DROP TABLE "tableam_parted_heap2";

CREATE TABLE tableam_parted_heap2 (
  a TEXT,
  b INT
)
PARTITION BY LIST(a);

SET default_table_access_method = heap;

CREATE TABLE tableam_parted_a_heap2
PARTITION OF tableam_parted_heap2
FOR VALUES IN ('a');

SET default_table_access_method = heap2;

CREATE TABLE tableam_parted_b_heap2
PARTITION OF tableam_parted_heap2
FOR VALUES IN ('b');

RESET default_table_access_method;

CREATE TABLE tableam_parted_c_heap2
PARTITION OF tableam_parted_heap2
FOR VALUES IN ('c') USING heap;

CREATE TABLE tableam_parted_d_heap2
PARTITION OF tableam_parted_heap2
FOR VALUES IN ('d') USING heap2;

SELECT
  pc.relkind,
  pa.amname,
  (CASE
  WHEN relkind =
  't' THEN (SELECT
    'toast for ' ||
    CAST(relname
    AS REGCLASS)
  FROM
    pg_class
    AS pcm
  WHERE
    pcm.reltoastrelid =
    pc.oid)
  ELSE CAST(CAST(relname
  AS REGCLASS)
  AS TEXT)
  END) COLLATE "C"
  AS relname
FROM
  pg_class
  AS pc,
  pg_am
  AS pa
WHERE
  pa.oid =
  pc.relam AND
  pa.amname =
  'heap2'
ORDER BY 3,
  1,
  2;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj
FROM
  pg_depend,
  pg_am
WHERE
  pg_depend.refclassid =
  CAST('pg_am'
  AS REGCLASS) AND
  pg_am.oid =
  pg_depend.refobjid AND
  pg_am.amname =
  'heap2'
ORDER BY classid,
  objid,
  objsubid;

CREATE TABLE heaptable USING heap AS
  SELECT
    a,
    repeat(
    CAST(a
    AS TEXT),
    100
    )
  FROM
    generate_series(
    1,
    9
    ) AS a;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heaptable'
  AS REGCLASS);

ALTER TABLE heaptable SET ACCESS METHOD heap2;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS objref,
  deptype
FROM
  pg_depend
WHERE
  classid =
  CAST('pg_class'
  AS REGCLASS) AND
  objid =
  CAST('heaptable'
  AS REGCLASS)
ORDER BY 1,
  2;

ALTER TABLE heaptable SET ACCESS METHOD heap;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS objref,
  deptype
FROM
  pg_depend
WHERE
  classid =
  CAST('pg_class'
  AS REGCLASS) AND
  objid =
  CAST('heaptable'
  AS REGCLASS)
ORDER BY 1,
  2;

ALTER TABLE heaptable SET ACCESS METHOD heap2;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heaptable'
  AS REGCLASS);

SELECT
  "COUNT"(
  a
  ),
  "COUNT"(
  1
  )
  FILTER (WHERE
    a =
    1)
FROM
  heaptable;

BEGIN;

SET LOCAL default_table_access_method = heap2;

ALTER TABLE heaptable SET ACCESS METHOD DEFAULT;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heaptable'
  AS REGCLASS);

SET LOCAL default_table_access_method = heap;

ALTER TABLE heaptable SET ACCESS METHOD DEFAULT;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heaptable'
  AS REGCLASS);

ROLLBACK;

CREATE MATERIALIZED VIEW heapmv USING heap AS
  SELECT
    *
  FROM
    heaptable;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heapmv'
  AS REGCLASS);

ALTER MATERIALIZED VIEW heapmv SET ACCESS METHOD heap2;

SELECT
  amname
FROM
  pg_class
  AS c,
  pg_am
  AS am
WHERE
  c.relam =
  am.oid AND
  c.oid =
  CAST('heapmv'
  AS REGCLASS);

SELECT
  "COUNT"(
  a
  ),
  "COUNT"(
  1
  )
  FILTER (WHERE
    a =
    1)
FROM
  heapmv;

ALTER TABLE heaptable
  SET ACCESS METHOD heap,
  SET ACCESS METHOD heap2;

ALTER TABLE heaptable
  SET ACCESS METHOD DEFAULT,
  SET ACCESS METHOD heap2;

ALTER MATERIALIZED VIEW heapmv
  SET ACCESS METHOD heap,
  SET ACCESS METHOD heap2;

DROP MATERIALIZED VIEW "heapmv";

DROP TABLE "heaptable";

CREATE TABLE am_partitioned (
  x INT,
  y INT
)
PARTITION BY HASH(x) USING heap2;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS refobj
FROM
  pg_depend,
  pg_am
WHERE
  pg_depend.refclassid =
  CAST('pg_am'
  AS REGCLASS) AND
  pg_am.oid =
  pg_depend.refobjid AND
  pg_depend.objid =
  CAST('am_partitioned'
  AS REGCLASS);

DROP TABLE "am_partitioned";

BEGIN;

SET LOCAL default_table_access_method = heap;

CREATE TABLE am_partitioned (
  x INT,
  y INT
)
PARTITION BY HASH(x);

SELECT relam FROM pg_class WHERE relname = 'am_partitioned';

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS refobj
FROM
  pg_depend,
  pg_am
WHERE
  pg_depend.refclassid =
  CAST('pg_am'
  AS REGCLASS) AND
  pg_am.oid =
  pg_depend.refobjid AND
  pg_depend.objid =
  CAST('am_partitioned'
  AS REGCLASS);

ALTER TABLE am_partitioned SET ACCESS METHOD heap2;

SELECT
  a.amname
FROM
  pg_class
  AS c,
  pg_am
  AS a
WHERE
  c.relname =
  'am_partitioned' AND
  a.oid =
  c.relam;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS refobj
FROM
  pg_depend,
  pg_am
WHERE
  pg_depend.refclassid =
  CAST('pg_am'
  AS REGCLASS) AND
  pg_am.oid =
  pg_depend.refobjid AND
  pg_depend.objid =
  CAST('am_partitioned'
  AS REGCLASS);

SET LOCAL default_table_access_method = heap2;

ALTER TABLE am_partitioned SET ACCESS METHOD heap;

SELECT
  a.amname
FROM
  pg_class
  AS c,
  pg_am
  AS a
WHERE
  c.relname =
  'am_partitioned' AND
  a.oid =
  c.relam;

SELECT
  pg_describe_object(
  classid,
  objid,
  objsubid
  )
  AS obj,
  pg_describe_object(
  refclassid,
  refobjid,
  refobjsubid
  )
  AS refobj
FROM
  pg_depend,
  pg_am
WHERE
  pg_depend.refclassid =
  CAST('pg_am'
  AS REGCLASS) AND
  pg_am.oid =
  pg_depend.refobjid AND
  pg_depend.objid =
  CAST('am_partitioned'
  AS REGCLASS);

SET LOCAL default_table_access_method = heap2;

ALTER TABLE am_partitioned SET ACCESS METHOD heap2;

SELECT
  a.amname
FROM
  pg_class
  AS c,
  pg_am
  AS a
WHERE
  c.relname =
  'am_partitioned' AND
  a.oid =
  c.relam;

ALTER TABLE am_partitioned SET ACCESS METHOD DEFAULT;

SELECT relam FROM pg_class WHERE relname = 'am_partitioned';

SELECT relam FROM pg_class WHERE relname = 'am_partitioned';

SET LOCAL default_table_access_method = heap;

CREATE TABLE am_partitioned_0
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 0);

SET LOCAL default_table_access_method = heap2;

CREATE TABLE am_partitioned_1
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 1);

SET LOCAL default_table_access_method = heap;

ALTER TABLE am_partitioned SET ACCESS METHOD heap2;

CREATE TABLE am_partitioned_2
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 2);

ALTER TABLE am_partitioned SET ACCESS METHOD DEFAULT;

SELECT relam FROM pg_class WHERE relname = 'am_partitioned';

CREATE TABLE am_partitioned_3
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 3);

ALTER TABLE am_partitioned SET ACCESS METHOD DEFAULT;

CREATE TABLE am_partitioned_5p
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 5)
PARTITION BY HASH(y);

CREATE TABLE am_partitioned_5p1
PARTITION OF am_partitioned_5p
FOR VALUES WITH (MODULUS 10, REMAINDER 1);

ALTER TABLE am_partitioned SET ACCESS METHOD heap2;

CREATE TABLE am_partitioned_6p
PARTITION OF am_partitioned
FOR VALUES WITH (MODULUS 10, REMAINDER 6)
PARTITION BY HASH(y);

CREATE TABLE am_partitioned_6p1
PARTITION OF am_partitioned_6p
FOR VALUES WITH (MODULUS 10, REMAINDER 1);

SELECT
  c.relname,
  a.amname
FROM
  pg_class
  AS c,
  pg_am
  AS a
WHERE
  c.relam =
  a.oid AND
  c.relname LIKE 'am_partitioned%'
UNION ALL
SELECT
  c.relname,
  'default'
FROM
  pg_class
  AS c
WHERE
  c.relam =
  0 AND
  c.relname LIKE 'am_partitioned%'
ORDER BY 1;

DROP TABLE "am_partitioned";

COMMIT;

BEGIN;

SET LOCAL default_table_access_method = heap2;

CREATE TABLE tableam_tbl_heapx ( f1 INT );

CREATE TABLE tableam_tblas_heapx AS
  SELECT
    *
  FROM
    tableam_tbl_heapx;

SELECT
INTO tableam_tblselectinto_heapx
FROM
  tableam_tbl_heapx;

CREATE MATERIALIZED VIEW tableam_tblmv_heapx USING heap2 AS
  SELECT
    *
  FROM
    tableam_tbl_heapx;

CREATE TABLE tableam_parted_heapx (
  a TEXT,
  b INT
)
PARTITION BY LIST(a);

CREATE TABLE tableam_parted_1_heapx
PARTITION OF tableam_parted_heapx
FOR VALUES IN ('a',
'b');

CREATE TABLE tableam_parted_2_heapx
PARTITION OF tableam_parted_heapx
FOR VALUES IN ('c',
'd') USING heap;

CREATE VIEW tableam_view_heapx AS
SELECT
  *
FROM
  tableam_tbl_heapx;

CREATE SEQUENCE tableam_seq_heapx;

CREATE FOREIGN DATA WRAPPER fdw_heap2
  VALIDATOR postgresql_fdw_validator ;

CREATE SERVER fs_heap2 FOREIGN DATA WRAPPER fdw_heap2;

CREATE FOREIGN TABLE tableam_fdw_heapx () SERVER fs_heap2;

SELECT
  pc.relkind,
  pa.amname,
  (CASE
  WHEN relkind =
  't' THEN (SELECT
    'toast for ' ||
    CAST(relname
    AS REGCLASS)
  FROM
    pg_class
    AS pcm
  WHERE
    pcm.reltoastrelid =
    pc.oid)
  ELSE CAST(CAST(relname
  AS REGCLASS)
  AS TEXT)
  END) COLLATE "C"
  AS relname
FROM
  pg_class
  AS pc
  LEFT OUTER JOIN pg_am
  AS pa
  ON pa.oid =
    pc.relam
WHERE
  pc.relname LIKE 'tableam_%_heapx'
ORDER BY 3,
  1,
  2;

ROLLBACK;

CREATE TABLE i_am_a_failure () USING i_do_not_exist_am;

CREATE TABLE i_am_a_failure () USING "I do not exist AM";

CREATE TABLE i_am_a_failure () USING btree;

CREATE FOREIGN TABLE fp
PARTITION OF tableam_parted_a_heap2
DEFAULT SERVER x;

DROP ACCESS METHOD heap2;
