crates/pgls_pretty_print/tests/snapshots/multi/tests__create_function_c_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_function_c_100.sql
snapshot_kind: text
---
LOAD 'regresslib';

CREATE FUNCTION test1(INT)
RETURNS INT
LANGUAGE "c"
AS 'nosuchfile';

CREATE FUNCTION test1(INT)
RETURNS INT
LANGUAGE "c"
AS 'regresslib', 'nosuchsymbol';

SELECT regexp_replace('LAST_ERROR_MESSAGE', 'file ".*"', 'file "..."');

CREATE FUNCTION test1(INT)
RETURNS INT
LANGUAGE "internal"
AS 'nosuch';
