crates/pgls_pretty_print/tests/snapshots/multi/tests__create_function_c_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_function_c.sql
snapshot_kind: text
---
load 'regresslib';

create function test1(INT)
returns INT
language "c"
as 'nosuchfile';

create function test1(INT)
returns INT
language "c"
as 'regresslib', 'nosuchsymbol';

select regexp_replace('LAST_ERROR_MESSAGE', 'file ".*"', 'file "..."');

create function test1(INT)
returns INT
language "internal"
as 'nosuch';
