crates/pgls_pretty_print/tests/snapshots/multi/tests__create_function_sql_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_function_sql_60.sql
snapshot_kind: text
---
CREATE USER regress_unpriv_user;

CREATE SCHEMA "temp_func_test";

GRANT ALL ON SCHEMA temp_func_test TO PUBLIC;

SET search_path TO temp_func_test, public;

CREATE FUNCTION functest_a_1(
  TEXT,
  DATE
)
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT $1 = ''abcd'' AND $2 > ''2001-01-01''';

CREATE FUNCTION functest_a_2(
  TEXT[]
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $1[1]::int';

CREATE FUNCTION functest_a_3()
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT false';

SELECT
  proname,
  CAST(prorettype
  AS REGTYPE),
  CAST(proargtypes
  AS REGTYPE[])
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_A_1'
  AS REGPROC),
  CAST('functest_A_2'
  AS REGPROC),
  CAST('functest_A_3'
  AS REGPROC))
ORDER BY proname;

SELECT functest_a_1('abcd', '2020-01-01');

SELECT functest_a_2(ARRAY['1', '2', '3']);

SELECT functest_a_3();

CREATE FUNCTION functest_b_1(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT $1 > 0';

CREATE FUNCTION functest_b_2(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
IMMUTABLE
AS 'SELECT $1 > 0';

CREATE FUNCTION functest_b_3(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
STABLE
AS 'SELECT $1 = 0';

CREATE FUNCTION functest_b_4(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
VOLATILE
AS 'SELECT $1 < 0';

SELECT
  proname,
  provolatile
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_B_1'
  AS REGPROC),
  CAST('functest_B_2'
  AS REGPROC),
  CAST('functest_B_3'
  AS REGPROC),
  CAST('functest_B_4'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_b_2(INT) VOLATILE;

ALTER FUNCTION functest_b_3(INT) COST 100;

SELECT
  proname,
  provolatile
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_B_1'
  AS REGPROC),
  CAST('functest_B_2'
  AS REGPROC),
  CAST('functest_B_3'
  AS REGPROC),
  CAST('functest_B_4'
  AS REGPROC))
ORDER BY proname;

CREATE FUNCTION functest_c_1(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT $1 > 0';

CREATE FUNCTION functest_c_2(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
SECURITY DEFINER
AS 'SELECT $1 = 0';

CREATE FUNCTION functest_c_3(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
SECURITY INVOKER
AS 'SELECT $1 < 0';

SELECT
  proname,
  prosecdef
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_C_1'
  AS REGPROC),
  CAST('functest_C_2'
  AS REGPROC),
  CAST('functest_C_3'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_c_1(INT) IMMUTABLE;

ALTER FUNCTION functest_c_2(INT) SECURITY INVOKER;

ALTER FUNCTION functest_c_3(INT) SECURITY DEFINER;

SELECT
  proname,
  prosecdef
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_C_1'
  AS REGPROC),
  CAST('functest_C_2'
  AS REGPROC),
  CAST('functest_C_3'
  AS REGPROC))
ORDER BY proname;

CREATE FUNCTION functest_e_1(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT $1 > 100';

CREATE FUNCTION functest_e_2(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
LEAKPROOF
AS 'SELECT $1 > 100';

SELECT
  proname,
  proleakproof
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_E_1'
  AS REGPROC),
  CAST('functest_E_2'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_e_1(INT) LEAKPROOF;

ALTER FUNCTION functest_e_2(INT) STABLE;

SELECT
  proname,
  proleakproof
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_E_1'
  AS REGPROC),
  CAST('functest_E_2'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_e_2(INT) NOT LEAKPROOF;

SELECT
  proname,
  proleakproof
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_E_1'
  AS REGPROC),
  CAST('functest_E_2'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_e_1(INT)
OWNER TO regress_unpriv_user;

ALTER FUNCTION functest_e_2(INT)
OWNER TO regress_unpriv_user;

SET SESSION AUTHORIZATION regress_unpriv_user;

SET search_path TO temp_func_test, public;

ALTER FUNCTION functest_e_1(INT) NOT LEAKPROOF;

ALTER FUNCTION functest_e_2(INT) LEAKPROOF;

CREATE FUNCTION functest_e_3(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
LEAKPROOF
AS 'SELECT $1 < 200';

RESET session_authorization;

CREATE FUNCTION functest_f_1(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
AS 'SELECT $1 > 50';

CREATE FUNCTION functest_f_2(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
CALLED ON NULL INPUT
AS 'SELECT $1 = 50';

CREATE FUNCTION functest_f_3(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
STRICT
AS 'SELECT $1 < 50';

CREATE FUNCTION functest_f_4(
  INT
)
RETURNS BOOLEAN
LANGUAGE "sql"
STRICT
AS 'SELECT $1 = 50';

SELECT
  proname,
  proisstrict
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_F_1'
  AS REGPROC),
  CAST('functest_F_2'
  AS REGPROC),
  CAST('functest_F_3'
  AS REGPROC),
  CAST('functest_F_4'
  AS REGPROC))
ORDER BY proname;

ALTER FUNCTION functest_f_1(INT) IMMUTABLE;

ALTER FUNCTION functest_f_2(INT) STRICT;

ALTER FUNCTION functest_f_3(INT) CALLED ON NULL INPUT;

SELECT
  proname,
  proisstrict
FROM
  pg_proc
WHERE
  oid IN (CAST('functest_F_1'
  AS REGPROC),
  CAST('functest_F_2'
  AS REGPROC),
  CAST('functest_F_3'
  AS REGPROC),
  CAST('functest_F_4'
  AS REGPROC))
ORDER BY proname;

SELECT pg_get_functiondef(CAST('functest_A_1' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_B_3' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_C_3' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_F_2' AS REGPROC));

CREATE FUNCTION functest_s_1(
  "a" TEXT,
  "b" DATE
)
RETURNS BOOLEAN
LANGUAGE "sql" RETURN a =
'abcd' AND
b >
'2001-01-01';;

CREATE FUNCTION functest_s_2(
  "a" TEXT[]
)
RETURNS INT RETURN CAST(a[1]
AS INT);;

CREATE FUNCTION functest_s_3()
RETURNS BOOLEAN RETURN FALSE;;

COMMIT;

SELECT a = 'abcd' AND b > '2001-01-01';

COMMIT;

SELECT 1;

SELECT FALSE;

COMMIT;

CREATE TABLE functest1 ( i INT );

INSERT INTO functest1 SELECT a + $2;

COMMIT;

CREATE FUNCTION functest_s_xxx(
  "x" INT
)
RETURNS INT
LANGUAGE "sql"
AS ' SELECT x * 2 ' RETURN x * 3;;

CREATE FUNCTION functest_s_xx(
  "x" ANYARRAY
)
RETURNS ANYELEMENT
LANGUAGE "sql" RETURN x[1];;

CREATE FUNCTION functest_s_xx(
  "x" DATE
)
RETURNS BOOLEAN
LANGUAGE "sql" RETURN x >
1;;

SELECT CASE WHEN x % 2 = 0 THEN TRUE ELSE FALSE END;

COMMIT;

SELECT functest_s_1('abcd', '2020-01-01');

SELECT functest_s_2(ARRAY['1', '2', '3']);

SELECT functest_s_3();

SELECT functest_s_10('abcd', '2020-01-01');

SELECT functest_s_13();

SELECT pg_get_functiondef(CAST('functest_S_1' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_2' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_3' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_3a' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_10' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_13' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_15' AS REGPROC));

SELECT pg_get_functiondef(CAST('functest_S_16' AS REGPROC));

DROP TABLE "functest1" CASCADE;

CREATE TABLE functest3 ( a INT );

INSERT INTO functest3 VALUES (1), (2);

CREATE VIEW functestv3 AS SELECT * FROM functest3;

CREATE FUNCTION functest_s_14()
RETURNS BIGINT RETURN (SELECT
  COUNT(*)
FROM
  functestv3);;

SELECT functest_s_14();

DROP TABLE "functest3" CASCADE;

CREATE FUNCTION functest_is_1(
  "a" INT,
  "b" INT DEFAULT 1,
  "c" TEXT DEFAULT 'foo'
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $1 + $2';

CREATE FUNCTION functest_is_2(
  OUT "a" INT,
  "b" INT DEFAULT 1
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $1';

CREATE FUNCTION functest_is_3(
  "a" INT DEFAULT 1,
  OUT "b" INT
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $1';

SELECT
  routine_name,
  ordinal_position,
  parameter_name,
  parameter_default
FROM
  information_schema.parameters
  INNER JOIN information_schema.routines
  USING (
    "specific_schema",
    "specific_name")
WHERE
  routine_schema =
  'temp_func_test' AND
  routine_name ~ '^functest_is_'
ORDER BY 1,
  2;

DROP FUNCTION functest_is_1(
  INT,
  INT,
  TEXT),
functest_is_2(INT),
functest_is_3(INT);

CREATE FUNCTION functest_is_4a()
RETURNS INT
LANGUAGE "sql"
AS 'SELECT 1';

CREATE FUNCTION functest_is_4b(
  "x" INT DEFAULT functest_is_4a()
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT x';

CREATE SEQUENCE functest1;

CREATE FUNCTION functest_is_5(
  "x" INT DEFAULT nextval('functest1')
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT x';

CREATE FUNCTION functest_is_6()
RETURNS INT
LANGUAGE "sql" RETURN nextval('functest1');;

CREATE TABLE functest2 ( a INT, b INT );

CREATE FUNCTION functest_is_7()
RETURNS INT
LANGUAGE "sql" RETURN (SELECT
  COUNT(a)
FROM
  functest2);;

SELECT
  r0.routine_name,
  r1.routine_name
FROM
  information_schema.routine_routine_usage
  AS rru
  INNER JOIN information_schema.routines
  AS r0
  ON r0.specific_name =
    rru.specific_name
  INNER JOIN information_schema.routines
  AS r1
  ON r1.specific_name =
    rru.routine_name
WHERE
  r0.routine_schema =
  'temp_func_test' AND
  r1.routine_schema =
  'temp_func_test'
ORDER BY 1,
  2;

SELECT
  routine_name,
  sequence_name
FROM
  information_schema.routine_sequence_usage
WHERE
  routine_schema =
  'temp_func_test'
ORDER BY 1,
  2;

SELECT
  routine_name,
  table_name,
  column_name
FROM
  information_schema.routine_column_usage
WHERE
  routine_schema =
  'temp_func_test'
ORDER BY 1,
  2;

SELECT
  routine_name,
  table_name
FROM
  information_schema.routine_table_usage
WHERE
  routine_schema =
  'temp_func_test'
ORDER BY 1,
  2;

DROP FUNCTION functest_is_4a CASCADE;

DROP SEQUENCE "functest1" CASCADE;

DROP TABLE "functest2" CASCADE;

CREATE FUNCTION functest_b_2(
  BIGINT
)
RETURNS BOOLEAN
LANGUAGE "sql"
IMMUTABLE
AS 'SELECT $1 > 0';

DROP FUNCTION functest_b_1;

DROP FUNCTION functest_b_1;

DROP FUNCTION functest_b_2;

CREATE FUNCTION functest1(
  "a" INT
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $1';

CREATE OR REPLACE FUNCTION functest1(
  "a" INT
)
RETURNS INT
LANGUAGE "sql"
WINDOW
AS 'SELECT $1';

CREATE OR REPLACE PROCEDURE functest1(
  "a" INT
)
LANGUAGE "sql"
AS 'SELECT $1';

DROP FUNCTION functest1(INT);

CREATE FUNCTION functest_srf0()
RETURNS SETOF INT
LANGUAGE "sql"
AS ' SELECT i FROM generate_series(1, 100) i ';

SELECT functest_srf0() LIMIT 5;

CREATE TABLE functest3 ( a INT );

INSERT INTO functest3 VALUES (1), (2), (3);

CREATE FUNCTION functest_sri1()
RETURNS SETOF INT
LANGUAGE "sql"
STABLE
AS '
    SELECT * FROM functest3;
';

SELECT * FROM functest_sri1();

SELECT * FROM functest_sri1();

SELECT * FROM functest3;

COMMIT;

SELECT * FROM functest_sri2();

SELECT * FROM functest_sri2();

DROP TABLE "functest3" CASCADE;

CREATE FUNCTION voidtest1(
  "a" INT
)
RETURNS VOID
LANGUAGE "sql"
AS ' SELECT a + 1 ';

SELECT voidtest1(42);

CREATE FUNCTION voidtest2(
  "a" INT,
  "b" INT
)
RETURNS VOID
LANGUAGE "sql"
AS ' SELECT voidtest1(a + b) ';

SELECT voidtest2(11, 22);

SELECT voidtest2(11, 22);

CREATE TEMPORARY TABLE sometable ( f1 INT );

CREATE FUNCTION voidtest3(
  "a" INT
)
RETURNS VOID
LANGUAGE "sql"
AS ' INSERT INTO sometable VALUES(a + 1) ';

SELECT voidtest3(17);

CREATE FUNCTION voidtest4(
  "a" INT
)
RETURNS VOID
LANGUAGE "sql"
AS ' INSERT INTO sometable VALUES(a - 1) RETURNING f1 ';

SELECT voidtest4(39);

SELECT * FROM sometable;

CREATE FUNCTION voidtest5(
  "a" INT
)
RETURNS SETOF VOID
LANGUAGE "sql"
AS ' SELECT generate_series(1, a) '
STABLE;

SELECT * FROM voidtest5(3);

SET check_function_bodies = off;

CREATE FUNCTION create_and_insert()
RETURNS VOID
LANGUAGE "sql"
AS '
  create table ddl_test (f1 int);
  insert into ddl_test values (1.2);
';

SELECT create_and_insert();

SELECT * FROM ddl_test;

CREATE FUNCTION alter_and_insert()
RETURNS VOID
LANGUAGE "sql"
AS '
  alter table ddl_test alter column f1 type numeric;
  insert into ddl_test values (1.2);
';

SELECT alter_and_insert();

SELECT * FROM ddl_test;

RESET check_function_bodies;

CREATE FUNCTION double_append(
  ANYARRAY,
  ANYELEMENT
)
RETURNS SETOF ANYARRAY
LANGUAGE "sql"
IMMUTABLE
AS ' SELECT array_append($1, $2) || array_append($1, $2) ';

SELECT
  double_append(array_append(ARRAY[q1],
  q2),
  q3)
FROM
  (VALUES (1,
  2,
  3),
  (4,
  5,
  6)) AS v (q1,
  q2,
  q3);

CREATE FUNCTION part_hashint4_error(
  "value" INT,
  "seed" BIGINT
)
RETURNS BIGINT
LANGUAGE "sql"
STRICT
IMMUTABLE
PARALLEL SAFE
AS ' SELECT value + seed + random()::int/0 ';

CREATE OPERATOR CLASS part_test_int4_ops_bad
  FOR TYPE INT
  USING hash
  AS FUNCTION 2 part_hashint4_error(
    INT,
    BIGINT);

CREATE TABLE pt (
  i INT
)
PARTITION BY HASH(i part_test_int4_ops_bad);

CREATE TABLE p1
PARTITION OF pt
FOR VALUES WITH (MODULUS 4, REMAINDER 0);

INSERT INTO pt VALUES (1);

INSERT INTO pt VALUES (1);

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT ''not an integer'';';

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS 'not even SQL';

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT 1, 2, 3;';

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS 'SELECT $2;';

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS 'a', 'b';

CREATE FUNCTION test1(
  INT
)
RETURNS INT
LANGUAGE "sql"
AS '';

SET check_function_bodies = off;

CREATE FUNCTION test1(
  ANYELEMENT
)
RETURNS ANYARRAY
LANGUAGE "sql"
AS '';

SELECT test1(0);

RESET check_function_bodies;

DROP SCHEMA temp_func_test CASCADE;

DROP ROLE regress_unpriv_user;

RESET search_path;
